test/crab/invalid/func_unexpected_arg.crab
fn main() -> Int {
    just_print()
    return 0
}

fn just_print(Int argument) {
    print(argument)
}
